# UrbiEigenfaces

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindUrbi.cmake
src/: CMakeLists.txt  UEigenfaces.cpp  UEigenfaces.h  eigenfaces.cpp  eigenfaces.hpp
